Fix minor spacing issues, add contact links

--- a/styles/sass/styles.sass
+++ b/styles/sass/styles.sass
@@ -1,8 +1,3 @@
-// TODO
-// - Get hero background image to fill under header
-
-
-
 // STYLEGUIDE
 $col-primary: hsl(322, 100%, 66%)
 $col-neutral-dark: hsl(192, 100%, 9%)
@@ -100,9 +95,10 @@ section
   background: url("../../assets/bg-hero-mobile.svg") no-repeat $col-neutral-light
   background-size: cover
   padding: 35px
-  margin-bottom: 40px
+  margin-bottom: 150px
   position: relative
   padding-top: 95px
+  padding-bottom: 60px
 .hero
   max-width: 1230px
   margin: 0 auto
@@ -161,6 +157,12 @@ footer
 footer .logo
   filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(344deg) brightness(104%) contrast(106%)
   height: 27px
+footer a
+  text-decoration: none
+  color: white
+footer a:hover
+  cursor: pointer
+  text-decoration: underline
 .contact, .sitemap, .social
   padding: 0px 15px 10px 15px
 p.icon-list
@@ -183,12 +185,6 @@ p.icon-list::before
 .sitemap ul li
   margin-top: 15px
   font-size: 1.1em
-.sitemap ul li a
-  text-decoration: none
-  color: white
-.sitemap ul li a:hover
-  cursor: pointer
-  text-decoration: underline
 
 .social
   margin: 0 auto
